# agx_arm_ws

./: .gitignore  PINOCCHIO_IK_GUIDE.md  README.md  activate_robot.py  auto_sorting_action.py  disable_arm.py  enable_gravity_comp.py  fix_urdf.py  local_sdk_bootstrap.py  mjx_env_activate.sh  mjx_env_check.py  pinocchio_ik_node.py  saved_poses.json  sorting_dataset copy.csv  sorting_dataset.csv  sorting_gui_client.py  table.scene  test.urdf  test3.xml  test_drag.py  test_leader.py  test_leader2.py  zuobiao.txt
src/agx_arm_ros/: README.md  README_EN.md
src/agx_arm_ros/docs/tcp_offset/: TCP_OFFSET.md  TCP_OFFSET_EN.md
src/agx_arm_ros/src/agx_arm_auto_sorting/: README.md  package.xml  setup.cfg  setup.py
src/agx_arm_ros/src/agx_arm_auto_sorting/agx_arm_auto_sorting/: config_utils.py  dataset_collection_runner.py  sorting_cycle_server.py
src/agx_arm_ros/src/agx_arm_auto_sorting/config/: sorting_dataset_config.yaml
src/agx_arm_ros/src/agx_arm_auto_sorting/launch/: auto_sorting_pipeline.launch.py
src/agx_arm_ros/src/agx_arm_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/agx_arm_ros/src/agx_arm_moveit/: CMakeLists.txt  README.md  README_EN.md  package.xml
src/agx_arm_ros/src/agx_arm_msgs/: CMakeLists.txt
src/agx_arm_ros/test/: README.md
src/piper_sim/piper_gazebo/: CMakeLists.txt  package.xml
src/piper_sim/piper_gazebo/scripts/: agx_sim_bridge.py  spawn_table_gazebo.py
src/piper_sim/piper_mujoco/: package.xml
src/piper_sim/piper_mujoco/scripts/: piper_mujoco_ctrl.py  piper_no_gripper_mujoco_ctrl.py
(+31 files in other folders)
